Add MainHeader component

--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
   <link rel="icon" href="/favicon.ico">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="E-commerce site to fill all your shopping needs">
-  <link rel="shortcut icon" href="./public/images/favicon.svg" type="image/x-icon">
+  <link rel="shortcut icon" href="./public/favicon.svg" type="image/x-icon">
+  <link href="https://api.fontshare.com/v2/css?f[]=satoshi@300,400,500&display=swap" rel="stylesheet">
   <title>E-SHOP</title>
 </head>
 
